...
                    )
                } else {
                    Text(
                        text = uiState.fact?.text ?: "",
                        modifier = modifier
                            .padding(Dimens.marginLarge)
                            .testTag("FactText")
                    )
                }

                Button(
                    modifier = modifier.padding(Dimens.marginLarge),
                    onClick = {
                        onMoreClick()
                    }) {
                    Text("More facts!")
                }
            }
        }
        if (uiState.previousFacts.isNotEmpty()) {
            item {
                Text(
...
