...
    ) {
        Box(
            modifier = Modifier
                .graphicsLayer {
                    this.translationX = offsetX
                }
                .testTag("Swipeable")
                .pointerInput(Unit) {
                    detectDragGestures { change, dragAmount ->
                        change.consume()
                        offsetX += dragAmount.x
                        if (offsetX > 150) {
                            jumpBackJob?.cancel()
...
